--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,38 +1,19 @@
-# action workflow to build and push docker image on release
+# action to build and push docker image on release
 name: Build and push Docker image on release
 
-# on:
-#     release:
-#         types: [published]
-
 on:
-    push:
-        branches:
-            - main
+    release:
+        types:
+            - created
 
 jobs:
-    build:
+    build-and-publish:
         runs-on: ubuntu-latest
-
         steps:
-            - name: Checkout repo
+            - name: Checkout repository
               uses: actions/checkout@v3
 
-            # setup node
-            - name: Set up Node.js
-              uses: actions/setup-node@v3
-              with:
-                  node-version: 22
-
-            # install dependencies
-            - name: Install dependencies
-              run: npm install
-
-            # build app
-            - name: Build React app
-              run: npm run build
-
-            # login to github container registry
+            # login to GitHub Container Registry
             - name: Log in to GitHub Container Registry
               uses: docker/login-action@v2
               with:
@@ -40,14 +21,13 @@ jobs:
                   username: ${{ github.actor }}
                   password: ${{ secrets.GITHUB_TOKEN }}
 
-            # build docker image
-            - name: Build Docker image
-              run: |
-                  IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/password-and-hash-generator:latest
-                  docker build -t $IMAGE_TAG .
-
-            # push docker image
-            - name: Push Docker image
-              run: |
-                  IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/password-and-hash-generator:latest
-                  docker push $IMAGE_TAG
+            # build and push docker image
+            - name: Build and push docker image
+              uses: docker/build-push-action@v4
+              with:
+                  file: .docker/Dockerfile
+                  context: .
+                  push: true
+                  tags: |
+                      ghcr.io/${{ github.repository_owner }}/password-and-hash-generator:${{ github.event.release.tag_name }}
+                      ghcr.io/${{ github.repository_owner }}/password-and-hash-generator:latest
