--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dependencies": {
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
-        "react-router-dom": "^7.7.1"
+        "react-router-dom": "^7.7.1",
+        "react-tsparticles": "^2.12.2",
+        "tsparticles-slim": "^2.12.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
