--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-router-dom": "^7.7.1",
-        "react-tsparticles": "^2.12.2",
-        "tsparticles-slim": "^2.12.0"
+        "@tsparticles/slim": "^3.0.0",
+        "@tsparticles/react": "^3.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
