--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
     "author": "Lukáš Bečvář",
     "license": "MIT",
     "private": false,
-    "version": "1.0",
-    "type": "module",
+    "version": "1.0.0",
+    "main": "electron/main.js",
+    "build": {
+        "files": [
+            "dist/**/*",
+            "electron/**/*",
+            "package.json"
+        ]
+    },
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "build": "vite build",
+        "preview": "vite preview",
+        "electron-dist": "npm run build && electron-builder"
     },
     "dependencies": {
+        "@tsparticles/react": "^3.0.0",
+        "@tsparticles/slim": "^3.0.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
-        "react-router-dom": "^7.7.1",
-        "@tsparticles/slim": "^3.0.0",
-        "@tsparticles/react": "^3.0.0"
+        "react-router-dom": "^7.7.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
@@ -24,6 +32,8 @@
         "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.7.0",
         "autoprefixer": "^10.4.21",
+        "electron": "^37.2.4",
+        "electron-builder": "^26.0.12",
         "eslint": "^9.30.1",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
