--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,7 +13,7 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v3
 
-            # login to GitHub Container Registry
+            # login to github container registry 
             - name: Log in to GitHub Container Registry
               uses: docker/login-action@v2
               with:
