--- a/package.json
+++ b/package.json
@@ -20,27 +20,31 @@
         "electron-dist": "npm run build && electron-builder"
     },
     "dependencies": {
+        "@tsparticles/react": "^3.0.0",
+        "@tsparticles/slim": "^3.0.0",
+        "bcryptjs": "^3.0.2",
+        "crypto-js": "^4.2.0",
+        "js-md4": "^0.3.2",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-router-dom": "^7.7.1",
-        "@tsparticles/slim": "^3.0.0",
-        "@tsparticles/react": "^3.0.0"
+        "scrypt-js": "^3.0.1"
     },
     "devDependencies": {
-        "vite": "^7.0.6",
-        "sass": "^1.89.2",
-        "eslint": "^9.30.1",
-        "postcss": "^8.5.6",
-        "globals": "^16.3.0",
-        "electron": "^37.2.4",
         "@eslint/js": "^9.30.1",
-        "tailwindcss": "^3.4.17",
         "@types/react": "^19.1.8",
-        "autoprefixer": "^10.4.21",
         "@types/react-dom": "^19.1.6",
-        "electron-builder": "^26.0.12",
         "@vitejs/plugin-react": "^4.7.0",
+        "autoprefixer": "^10.4.21",
+        "electron": "^37.2.4",
+        "electron-builder": "^26.0.12",
+        "eslint": "^9.30.1",
         "eslint-plugin-react-hooks": "^5.2.0",
-        "eslint-plugin-react-refresh": "^0.4.20"
+        "eslint-plugin-react-refresh": "^0.4.20",
+        "globals": "^16.3.0",
+        "postcss": "^8.5.6",
+        "sass": "^1.89.2",
+        "tailwindcss": "^3.4.17",
+        "vite": "^7.0.6"
     }
 }
