--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,7 +25,7 @@ jobs:
             - name: Build and push docker image
               uses: docker/build-push-action@v4
               with:
-                  file: .docker/Dockerfile
+                  file: .docker/Dockerfile.prod
                   context: .
                   push: true
                   tags: |
